# ios-audio-fingerprint

./: .gitignore  .semgrep.yml  .swift-format  Package.swift  README.md
.github/workflows/: fingerprint-ci.yml  fingerprint-release.yml  rust-ci.yml  rust-fuzz.yml
Benchmarks/FingerprintBenchmarkRunner/: main.swift
Fingerprint.xcframework/: Info.plist
Fingerprint.xcframework/ios-arm64/FingerprintFFI.framework/: FingerprintFFI  Info.plist
Fingerprint.xcframework/ios-arm64/FingerprintFFI.framework/Modules/: module.modulemap
Fingerprint.xcframework/ios-arm64/Headers/: FingerprintFFI.h
Fingerprint.xcframework/ios-arm64_x86_64-simulator/FingerprintFFI.framework/: FingerprintFFI  Info.plist
Fingerprint.xcframework/ios-arm64_x86_64-simulator/FingerprintFFI.framework/Headers/: FingerprintFFI.h
Fingerprint.xcframework/ios-arm64_x86_64-simulator/Headers/: FingerprintFFI.h  module.modulemap
Sources/Fingerprint/: fingerprint_uniffi.swift
Sources/Fingerprint/Fingerprint.docc/: Fingerprint.md  InterpretingMatchScores.md
Tests/FingerprintTests/: FingerprintBenchmarkTests.swift  FingerprintTests.swift
codex-analysis/: benchmarking.md  pure-rust-reimplementation-spec.md  reoxide-macos-run.md
codex-analysis/benchmarks/baseline-20260630T171947Z/: results.csv  results.json  summary.md
docs/: implementation.md  public-api.txt  release.md
rust/: Cargo.toml
rust/crates/fingerprint-core/: Cargo.toml
rust/crates/fingerprint-core/benches/: fingerprint_bench.rs
rust/crates/fingerprint-core/src/: error.rs  lib.rs  matching.rs
rust/crates/fingerprint-core/src/audio/: decoder.rs  mod.rs  resampler.rs  wav.rs
rust/crates/fingerprint-core/src/fingerprint/: chroma.rs  encoder.rs  fft.rs  mod.rs  streaming.rs
rust/crates/fingerprint-core/tests/: core_behavior.rs  decode_safety.rs  golden.rs  properties.rs
rust/crates/fingerprint-ffi/: Cargo.toml
rust/crates/fingerprint-ffi/include/: FingerprintFFI.h
rust/crates/fingerprint-ffi/src/: lib.rs
rust/fuzz/: Cargo.toml  README.md
rust/fuzz/corpus/decode_audio/: crash-9acc0995bc54e688c19ba22b45665b76c34cfb41
rust/fuzz/fuzz_targets/: decode_audio.rs  fingerprint_from_bytes.rs
scripts/: assert-swift-toolchain.sh  build-rust-xcframework.sh  check-public-api.py  generate-mp3-fixture.py  verify-xcframework.sh
