[package]
name = "fingerprint-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
num-complex = "0.4"
rustfft = "6"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "wav", "pcm"] }
thiserror = "2"

[dev-dependencies]
assert_approx_eq = "1"
