[package]
name = "fingerprint-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
num-complex = "0.4"
rustfft = "6"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "wav", "pcm"] }
thiserror = "2"

[dev-dependencies]
assert_approx_eq = "1"
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
proptest = "1"

[[bench]]
name = "fingerprint_bench"
harness = false
