[package]
name = "fingerprint-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Off by default so the shipped Fingerprint.xcframework carries no thread-pool
# dependency. When enabled, one-shot windowed fingerprinting is parallelized
# across CPU cores; the output is identical to the sequential path (each window
# is independent), which the golden tests verify under `--all-features`.
parallel = ["dep:rayon"]

[dependencies]
num-complex = "0.4"
rayon = { version = "1", optional = true }
rustfft = "6"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "wav", "pcm"] }
thiserror = "2"

[dev-dependencies]
assert_approx_eq = "1"
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
proptest = "1"

[[bench]]
name = "fingerprint_bench"
harness = false
